# Vocalyx

./: README.md  pyproject.toml
vocalyx/: __init__.py  client.py  tts_server.py
